fixed bug where a user could break the site by liking a movie without being logged in

--- a/movie/src/movieModal.css
+++ b/movie/src/movieModal.css
@@ -38,6 +38,12 @@
     justify-content: space-evenly;
     font-weight: 300;
   }
+
+  .MovieModal__error{
+    color: red;
+    font-size: 12;
+    text-align: center
+  }
   
   .MovieModal__title {
     height: 12%;
